[IDEA run configuration] Open the javax.swing.text package to all unnamed modules
- This is a new requirement since IDEA 2024.1 Beta.